Felder zum Rechnen und paar neue Knöpfe hinzugefügt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <button type="button" id="plusbutton"> +1</button>
     <button type="button" id="minusbutton"> -1</button>
+    <button type= "button" id ="multbutton2"> x2</button>
+    <button type= "button" id ="multbutton3"> x3</button>
+    <button type= "button" id ="hoch2button"> ^2</button>
     <button type="button" id="resetbutton"> reset</button> 
 
     <form id="addForm" >
@@ -18,6 +21,14 @@
     </form>
     <form id = "subForm">
         <input type="number" id="numberSub" placeholder="Minus">
+    </form>
+
+    <form id = "multForm">
+        <input type = "number" id = "numberMult" placeholder="Mal">
+    </form>
+
+    <form id = "divForm">
+        <input type = "number" id = "numberDiv" placeholder="Geteilt">
     </form>
 
     
