--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
 
     
-
+    <center id="number"> Die Zahl</center>
     <span id="number"></span>
     <script src = "script.js"></script>
 </body>
